# tudelft_utq_assess

./: README.md  assignment_exam_analysis.ipynb  pyproject.toml
data/: test_data_with_grades.csv
results/csvs/: final_test_data.csv  questions_results.csv  students_data.csv
